--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
         <textarea id="csvInput" rows="6" placeholder="Titel,Tempo\nSection,Bar1,Bar2\nIntro,D .. G,G .. A\nVerse 1,D .. G,Em .. A,D .. G,D .. A"></textarea>
         <label for="tempo">Tempo (BPM):</label>
         <input type="number" id="tempo" min="30" max="300" value="120" />
+
+        <!-- Dropdown för att välja fördefinierade låtar från songs.json -->
+        <div id="songSelectWrapper" class="song-select">
+          <label for="songSelect">Välj låt:</label>
+          <select id="songSelect">
+            <option value="">-- välj låt --</option>
+          </select>
+          <button id="loadSong" class="toggle-button">Ladda valda låt</button>
+        </div>
         <div class="btn-row">
           <button id="load">Ladda diagram</button>
           <button id="start">Starta</button>
@@ -33,11 +42,11 @@
       </div>
       <button id="toggleControls" class="toggle-controls">Fäll ihop ▲</button>
     </div>
+    <!-- Textrad per sektion: visas ovanför nuvarande ackord och macroflow -->
+    <div id="sectionText" class="section-text"></div>
     <div id="currentChord" class="current-chord"></div>
     <div id="macroFlow" class="macro-flow"></div>
     <div id="microFlow" class="micro-flow">
-      <!-- lyrics row: visas endast om det finns text i CSV och lyssynk är på -->
-      <div id="lyricsRow" class="lyrics-row"></div>
       <div id="microCurrent" class="micro-row"></div>
       <div id="microNext" class="micro-row"></div>
     </div>
